<resources>
    <string name="app_name">Team 49</string>
    <string name="login">LOGIN</string>
    <string name="name">Name</string>
    <string name="pin">Pin</string>
    <string name="login_button">Login</string>
    <string name="register">REGISTER</string>
    <string name="register_button">Register</string>
    <string name="or_text">OR</string>
    <string name="registered">Already Registered? Click here.</string>
    <string name="confirm">Confirm Pin</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="ingredient">Ingredient</string>
    <string name="add">add</string>
    <string name="minus">minus</string>
    <string name="order">order</string>

    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Barcode Reader Sample</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>

    <string name="facebook_app_id">594694270867248</string>
    <string name="fb_login_protocol_scheme">fb594694270867248</string>

    <string name="yummly_app_id">bd3d9a8a</string>
    <string name="yummly_app_key">aae41863adcb337b442a93c71fb77344</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scan_barcode">Scan</string>
    <string name="enter_manually">Enter Manually</string>
    <string name="item_name">Item Name</string>
    <string name="barcode_number">Barcode Number</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="pick_a_date">Pick a Date</string>
    <string name="add_item">Add Item</string>
    <string name="click_to_capture_one"><![CDATA[Click to Capture ->]]></string>
    <string name="click_to_capture_two"><![CDATA[<- Click to Capture]]></string>
    <string name="optional">(Optional)</string>
    <string name="quantity">Quantity</string>
    <string name="plus">+</string>
    <string name="minus_symbol">-</string>
    <string name="change_pin">Change Pin</string>
    <string name="my_recipes">My Recipes</string>
    <string name="reset_account">Reset Account</string>
    <string name="logout">Log Out</string>
    <string name="old_pin">Old Pin</string>
    <string name="new_pin">New Pin</string>
    <string name="rating">Rating:</string>
    <string name="source">Source:</string>
    <string name="course">Course:</string>
    <string name="cuisine">Cuisine:</string>
    <string name="visit_website">Visit Website</string>
    <string name="search">Search</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="ingredients_to_include">Ingredients to Include</string>
    <string name="choose">Choose</string>
    <string name="pick">What Can I Make Now?</string>
    <string name="no_recipe_found">No Recipe Found :(</string>
    <string name="reload_stock">There was an error loading your Stock. \n Click here to Reload</string>
    <string name="empty_stock">Your stock is empty! \n \n Add some items using \"Add New\" to begin</string>
    <string name="account_error">Account Settings can not be loaded when offline. \n Please connect to the Internet. \n \n Click here to Reload</string>
    <string name="error_data_entry">Items can not be added to Stock when offline. \n Please connect to the Internet. \n \n Click here to Reload</string>
    <string name="view_ingredients">Ingredients</string>
    <string name="error_registration">There was a network error while registering your account \n Click here to reload the registration form</string>
    <string name="error_login">There was a network error while logging you in \n Click here to reload the login form</string>
    <string name="error_login_no_account">No account was found registered from this device \n Click here to reload the login form and Register</string>

</resources>
