<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.team49.RecipesFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="9">

            <EditText
                android:id="@+id/recipe_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/recipe_name"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"
                android:textAlignment="center"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/recipe_search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:background="@drawable/shape"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/search"/>

    </LinearLayout>

    <Button
        android:id="@+id/ingredient_search_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/shape"
        android:layout_gravity="center"
        android:text="@string/pick"
        android:layout_margin="10dp"/>

    <ViewFlipper
        android:id="@+id/recipe_view_flipper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <ListView
            android:id="@+id/recipe_list_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/no_recipe_found"/>

    </ViewFlipper>

</LinearLayout>
