<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.team49.DataEntryFragment">

    <ViewFlipper
        android:id="@+id/data_entry_view_flipper"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="0dp"
                android:layout_above="@id/non_scrollable">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="50dp"
                    android:paddingBottom="30dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/item_image"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/fruit"
                        android:layout_margin="10dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="30dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="30dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textColor="@android:color/black"
                            android:text="@string/barcode_number"
                            android:layout_gravity="center_vertical"
                            android:paddingRight="10dp"/>

                        <EditText
                            android:id="@+id/item_barcode"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:textAlignment="center"
                            android:hint="@string/optional"
                            android:inputType="number"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="30dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textColor="@android:color/black"
                            android:text="@string/item_name"
                            android:layout_gravity="center_vertical"
                            android:paddingRight="10dp"/>

                        <EditText
                            android:id="@+id/item_name"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:textAlignment="center"
                            android:inputType="textVisiblePassword"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="30dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textColor="@android:color/black"
                            android:text="@string/expiry_date"
                            android:layout_gravity="center_vertical"
                            android:paddingRight="10dp"/>

                        <Button
                            android:id="@+id/item_exp"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:background="@drawable/shape"
                            android:textColor="@color/colorPrimaryDark"
                            android:text="@string/pick_a_date"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="30dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textColor="@android:color/black"
                            android:text="@string/quantity"
                            android:layout_gravity="center_vertical"
                            android:paddingRight="10dp"/>

                        <NumberPicker
                            android:id="@+id/item_quantity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:requiresFadingEdge="horizontal"
                            android:textColor="@color/colorPrimaryDark"
                            android:background="@drawable/shape"
                            android:layout_weight="1"/>

                    </LinearLayout>

                </LinearLayout>

            </ScrollView>

            <LinearLayout
                android:id="@+id/non_scrollable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/button_barcode_input"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/shape"
                    android:drawableTop="@drawable/barcode_icon_small"
                    android:text="@string/scan_barcode"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_margin="10dp"/>

                <Button
                    android:id="@+id/confirm_add_item"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/shape"
                    android:text="@string/add_item"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_margin="10dp"/>
            </LinearLayout>

        </RelativeLayout>

        <TextView
            android:id="@+id/data_entry_reload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="@string/error_data_entry"
            android:drawableBottom="@drawable/ic_refresh_black_24dp"/>

    </ViewFlipper>


</RelativeLayout>
