<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.team49.AccountFragment">

    <TextView
        android:id="@+id/greeting_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textColor="@color/colorAccent"
        android:gravity="center"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/pin_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textColor="@color/colorAccent"
        android:gravity="center"
        android:visibility="invisible"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/greeting_view"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <Button
                android:id="@+id/change_pin_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape"
                android:textColor="@color/colorPrimary"
                android:layout_marginBottom="20dp"
                android:text="@string/change_pin"/>

            <Button
                android:id="@+id/my_recipes_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape"
                android:textColor="@color/colorPrimary"
                android:layout_marginBottom="20dp"
                android:text="@string/my_recipes"/>

            <Button
                android:id="@+id/reset_account_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/shape"
                android:textColor="@color/red"
                android:text="@string/reset_account"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
