<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.team49.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background"
        android:scaleType="centerCrop"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.6"
        android:background="@android:color/black"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:id="@+id/root_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.15"/>
        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center">

            <ViewFlipper
                android:id="@+id/login_view_flipper"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="@drawable/shape">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:textColor="@android:color/black"
                        android:text="@string/login"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="10dp"
                        android:layout_marginBottom="20dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_vpn_key_black_24dp"
                            android:layout_gravity="center"
                            android:layout_weight="1"/>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="14">

                            <EditText
                                android:id="@+id/etPassword"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/pin"
                                android:maxLength="4"
                                android:inputType="numberPassword"
                                android:textAlignment="center" />

                        </android.support.design.widget.TextInputLayout>

                    </LinearLayout>

                    <Button
                        android:id="@+id/button_login"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/shape"
                        android:text="@string/login_button"
                        android:textColor="@color/colorPrimaryDark" />

                    <Button
                        android:id="@+id/button_register"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="20dp"
                        android:background="@drawable/shape"
                        android:text="@string/register_button"
                        android:textColor="@color/colorPrimaryDark" />

                </LinearLayout>

                <TextView
                    android:id="@+id/login_error"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="30dp"
                    android:paddingTop="40dp"
                    android:paddingBottom="40dp"
                    android:gravity="center"
                    android:background="@drawable/shape"
                    android:textColor="@color/colorAccent"
                    android:text="@string/error_login"
                    android:drawableBottom="@drawable/ic_refresh_black_24dp"/>

                <TextView
                    android:id="@+id/login_error_no_account"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="30dp"
                    android:paddingTop="40dp"
                    android:paddingBottom="40dp"
                    android:gravity="center"
                    android:background="@drawable/shape"
                    android:textColor="@color/colorAccent"
                    android:text="@string/error_login_no_account"
                    android:drawableBottom="@drawable/ic_refresh_black_24dp"/>

            </ViewFlipper>


        </ScrollView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.15"/>

    </LinearLayout>

</RelativeLayout>
